Update: sound + knockback + toggle color switches
Added sound effects and bg music to the game
SFX:pickup, spikes, footsteps, takedmg, springboard
Different sprites for pickup and placement of item
Added knockback for enemies
Made the colorswitches toggle to support multiple switches at once.

--- a/TODO.txt
+++ b/TODO.txt
@@ -24,7 +24,30 @@ stiger
 lodd med kjetting // vanskeliger enn antatt
 nøkler?
 
+SOUND:
+enemy:
+	idle
+	atk
+	eat
+	walk
+player
+	jump
+	hit ground/walls/ceiling
+item:
+	idle
+	pick up
+	release
+	can't place
+	hit ground
+	switches & blocks
+	Moving platform
+	
+	
+	
+	
+
 Bugs:
 begrens hvor ting kan settes ut
 Organisere koden + mappestruktur bedre
 fikse fargebokser med enums og shit.
+flere dyr spiser mat samtidig
