Doc: Big update

--- a/doc/report/experiment/chp_preparations.tex
+++ b/doc/report/experiment/chp_preparations.tex
@@ -1,1 +1,54 @@
-\chapter{Preparations}
+\chapter{Planning}
+This chapter describes the planning that went into finding a suitable group that fit the target audience of the game prototype and the questionnaire that were developed to evaluate the results of the experimentation.
+
+
+\section{Preparations}
+Since this project and one of the research goals is aimed towards children, the play testing should be preformed with children. The natural place to look for children are in schools, so a local school was contacted to try to set up a play testing session with the school children.
+
+Bente Sandø the leader of the after school programme for Buvik School was contacted by email to inquire about the possibility to preform the play testing with their pupils. The response was positive and the planning on how the play test would be executed was started.
+
+
+\section{Questionnaire}
+A questionnaire was developed in order to evaluate the results of the play testing. The questionnaire is based of the gameflow framework \cite{sweetser2005gameflow}, and the questionnaire created by Fu et al \cite{fu2009egameflow}. The questions are divided into groups corresponding to the gameflow categories: Concentration, a. The final version of the questionnaire can be seen in Table \ref{tab:questions}. The questions were tailored towards children by simplifying them and making them easier to understand. Gameflow is discussed in section \ref{sec:gameflow}.
+
+Note: the questions were asked verbally to the children, in Norwegian, and their answers were logged by the interviewer. The original Norwegian questionnaire is included in Appendix X.
+
+\begin{table}[]
+	\centering
+	\caption{The questions from the questionnaire}
+	\label{tab:questions}
+	\begin{tabular}{|l|l|}
+		\hline
+		\textbf{ID} & \textbf{Question}                                              \\ \hline
+					& \textbf{Concentration}                                         \\ \hline
+		Q1          & I am concentrated when playing the game                        \\ \hline
+					& \textbf{Goal Clarity}                                          \\ \hline
+		Q2          & It was easy to understand the goal of the game                 \\ \hline
+					& \textbf{Feedback}                                              \\ \hline
+		Q3          & It is easy to understand when I do something wrong in the game \\
+		Q4          & It is easy to understand when I do something good in the game  \\
+		Q5          & I liked the graphics of the game                               \\
+		Q6          & I liked the sounds of the game                                 \\ \hline
+					& \textbf{Challenge}                                             \\ \hline
+		Q7          & I get bored when playing the game                              \\
+		Q8          & The game was too easy                                          \\
+		Q9          & The game was adequately difficult                              \\
+		Q10         & The game was too hard                                          \\
+		Q11         & My skill gradually improved when playing the game              \\ \hline
+					& \textbf{Autonomy}                                              \\ \hline
+		Q12         & I felt in control of the movements of the player               \\
+		Q13         & I could recover from errors I made in the game                 \\ \hline
+					& \textbf{Immersion}                                             \\ \hline
+		Q14         & Time goes by fast when plaing the game                         \\
+		Q15         & I become unaware of my surroundings when playing the game      \\ \hline
+					& \textbf{Social Interaction}                                    \\ \hline
+		Q16         & I was competing with others to reach the furthest              \\
+		Q17         & It was important to communicate when playing the game          \\
+		Q18         & It was important to cooperate when playing the game            \\
+		Q19         & I cooperated well with the other player                        \\
+		Q20         & The other player cooperated well with me                       \\ \hline
+					& \textbf{Game Enjoyment}                                        \\ \hline
+		Q21         & I enjoyed playing the game                                     \\
+		Q22         & I would like to play this game at home                         \\ \hline
+	\end{tabular}
+\end{table}
