--- a/doc/report/experiment/chp_results_and_analysis.tex
+++ b/doc/report/experiment/chp_results_and_analysis.tex
@@ -1,1 +1,49 @@
 \chapter{Results and Analysis}
+This chapter presents the results of the play testing session along with observations that were made and analysis of the results.
+
+
+\section{Results}
+The statistical mean, variance and standard deviation of the questions from the questionnaire can be seen in Table \ref{tab:stat_results}. The ages of the participants were ranging from six to nine years old with the composition being: six six year olds (32\%), five seven year olds (26\%), five eight year olds (26\%), and three nine year olds (16\%). Out of the total of 19 participants, 8 of them were female (44\%). Over half of the children told that they had a lot of prior game experience (58\%), seven said that they had some game experience (37\%), and one told that they had no prior game experience(5\%).
+
+\note{Føler at denne delen er litt tynn. Hvordan kan jeg fylle den ut bedre? skal jeg nevne ting fra tabellen/ på hvilken måte kan jeg nevne ting fra tabellen? Litt input på selve tabellen hadde også vært fint.}
+
+\begin{table}[!ht]
+	\centering
+	\caption{Statistical results of the questionnaire}
+	\label{tab:stat_results}
+	\begin{tabular}{|l|l|l|l|l|}
+		\hline
+		\textbf{Question} & \textbf{Mean} & \textbf{Median} & \textbf{Variance} & \textbf{ST.Dev} \\ \hline
+		Q1                & 3,6842105263  & 4               & 0,2280701754      & 0,4775669329    \\ \hline
+		Q2                & 2,5789473684  & 3               & 1,701754386       & 1,3045130839    \\ \hline
+		Q3                & 3,1578947368  & 3               & 1,0292397661      & 1,014514547     \\ \hline
+		Q4                & 3,4210526316  & 4               & 0,701754386       & 0,8377078166    \\ \hline
+		Q5                & 3,9473684211  & 4               & 0,0526315789      & 0,2294157339    \\ \hline
+		Q6                & 3,2631578947  & 4               & 1,0935672515      & 1,045737659     \\ \hline
+		Q7                & 1,3684210526  & 1               & 0,9122807018      & 0,9551338659    \\ \hline
+		Q8                & 1,4736842105  & 1               & 1,0409356725      & 1,0202625508    \\ \hline
+		Q9                & 2,5789473684  & 3               & 1,5906432749      & 1,2612070706    \\ \hline
+		Q10               & 2,1052631579  & 2               & 1,5438596491      & 1,2425214884    \\ \hline
+		Q11               & 3,5263157895  & 4               & 0,9298245614      & 0,9642741111    \\ \hline
+		Q12               & 3,0526315789  & 4               & 1,3859649123      & 1,1772701102    \\ \hline
+		Q13               & 2,8421052632  & 3               & 1,5847953216      & 1,2588865404    \\ \hline
+		Q14               & 3,2631578947  & 4               & 1,2046783626      & 1,0975784084    \\ \hline
+		Q15               & 3,6842105263  & 4               & 0,6725146199      & 0,8200698872    \\ \hline
+		Q16               & 1,7894736842  & 1               & 1,2865497076      & 1,1342617456    \\ \hline
+		Q17               & 3,8947368421  & 4               & 0,0994152047      & 0,3153017676    \\ \hline
+		Q18               & 3,9473684211  & 4               & 0,0526315789      & 0,2294157339    \\ \hline
+		Q19               & 3,6842105263  & 4               & 0,4502923977      & 0,6710382982    \\ \hline
+		Q20               & 3,7894736842  & 4               & 0,3976608187      & 0,6306035353    \\ \hline
+		Q21               & 4             & 4               & 0                 & 0               \\ \hline
+		Q22               & 4             & 4               & 0                 & 0               \\ \hline
+	\end{tabular}
+\end{table}
+
+
+\section{Observations}
+This section describes some general observations that were made during the play testing which were observed by the interviewers. The length of the questionnaire was an appropriate amount of questions, it could not have been any longer as some children seemed to lose their attention at the end. It was also important to explain the questions well, as some of them were not as easy to grasp for the children. Some questions also needed to be asked twice in order to get a sense of scale of agreement or disagreement. Questions like: "do you strongly agree or just slightly" were frequently asked when the detail was not provided in the initial response of the child. 
+
+The majority of the children were very cooperative with each other and there were a lot of communication between them on things like how to conquer the different obstacles and what to do next. Learning the controls of the alien and the hand character was the focus of the first level, but the movement for the alien character was more complex, which led to some players wanting to switch controllers. However on the following levels the tasks for the hand character were more complicated and the players often wanted to switch back to the hand character. The game was possibly a little too hard for the children that we tested, as some were struggling to beat the first level.  Despite this, most of the children thought the game difficulty was adequate and all of the players thought that the game was fun and would like to play it at home.
+
+\section{Analysis}
+\note{Trenger litt hjelp med denne delen, er ikke helt sikker på hvordan jeg skal analysere resultatene. Skal jeg bruke noe slags fancy matematikk og statistisk analyse? Skal jeg diskutere spørsmålene hver for seg? burde jeg kanskje dele det opp inn i de forskjellige gameflow kategoriene(concentration, challenge, etc.). Kanskje ha en underkaputtel for kjønnsforskjeller?}
