--- a/doc/report/init/glossaries.tex
+++ b/doc/report/init/glossaries.tex
@@ -2,3 +2,4 @@
 % write: \gls{<tag>}\. This will define the acronym.
 % For subsequent uses write: \gls{<tag>} (without the backslash on the end).
 \newacronym{ntnu}{NTNU}{Norwegian University of Science and Technology}
+\newacronym{gqm}{GQM}{Goal Question Metric}
