--- a/doc/report/init/titlepage.tex
+++ b/doc/report/init/titlepage.tex
@@ -1,11 +1,12 @@
 \begin{titlepage}
+	\includegraphics[]{images/ntnu_logo}\par\vspace{1.5cm}
 	\centering
-	%\includegraphics[width=0.15\textwidth]{example-image-1x1}\par\vspace{1cm}
-	{\scshape\LARGE Norwegian University of Science and Technology \par}
-	\vspace{1cm}
+	%{\scshape\LARGE Norwegian University of Science and Technology \par}
+	%\vspace{1cm}
 	{\scshape\Large TDT4900 - Computer Science, Master's Thesis\par}
 	\vspace{1.5cm}
-	{\huge\bfseries \uppercase{Alternative Games}\\ Game concept and experimentation\par}
+	{\huge\bfseries \uppercase{Alternative games} \\ 
+	\Large A cooperative video game with different roles - concept and experimentation\par}
 	\vspace{2cm}
 	{\Large\itshape David Hovind\par}
 	\vfill
