--- a/doc/report/introduction/chp_methodology.tex
+++ b/doc/report/introduction/chp_methodology.tex
@@ -1,1 +1,49 @@
 \chapter{Methodology}
+The research method used in this project is based on the \gls{gqm} approach \cite{1992basili}, where firstly a research goal is defined (conceptual level), secondly the goal is decomposed into research questions (operational level), and lastly the research questions are described by a set of metrics that answers the research questions (quantitative level).
+
+
+\section{Research Goals}
+The following research goals were developed using the template for research goals of the \gls{gqm} framework.
+\begin{description}
+	\item[RG1:] The purpose of this project is to create a collaborative game prototype where two players have different roles to encourage collaboration between players and to experiment with social interaction between players in the context of video game design.
+	
+	\item[RG2:] The purpose of this project is to see how children experience a collaborative game prototype where two players have different roles to find out if this is an enjoyable and entertaining experience from the point of view of the children in the context of playing video games.
+	
+	\item[RG3:] The purpose of this study is to investigate how different interaction devices can be used to create video games from the point of view of an independent developer in the context of video game design. 
+\end{description}
+
+%En utfordring: Begge spillerene har forskjellige roller, men begge er aktive.
+%Hvordan fordele arbeidsoppgaver på en lur måte.
+
+%Er dette noe som er engasjerende for barn, med samarbeidsspill.
+%Er det noen forskjeller mellom gutt/jente, spillbakgrunn?.
+%Se om det er flere ting fra spørreundersøkelsen
+
+%Ha et spørsmåal ang teknologi.
+%Bruke motion teknologi fra konsoller til pc.
+
+\section{Research Questions}
+The research goals are broken down into research question according to the \gls{gqm} framework.
+\subsection{Research Goal 1: Collaborative Game}
+\begin{description}
+	\item[RQ1.1:] What game mechanics are suitable for a game with two different roles?
+	\item[RQ1.2:] How can the engagement of both player be equally balanced when they have different roles?
+	\item[RQ1.3] How can the game be design to create a strong dependency between the two players.
+\end{description}
+\subsection{Research Goal 2: Children's Experience}
+\begin{description}
+	\item[RQ2.1:] Is a collaborative game with different roles engaging for children?
+	\item[RQ2.2:] Does the children's gender or game experience affect game enjoyment of a collaborative game with different roles?
+	%ha med eengagement og concentration og.
+\end{description}
+\subsection{Research Goal 3: Interaction Devices}
+\begin{description}
+	\item[RQ3.1] What tools are available for developing video games as an independent developer.
+	\item[RQ3.2] Can proprietary controllers made for game consoles be used to develop games for the PC?
+\end{description}
+	
+
+\section{Process}
+
+
+\section{Data Sources}
