--- a/doc/report/results/chp_architecture.tex
+++ b/doc/report/results/chp_architecture.tex
@@ -1,1 +1,15 @@
 \chapter{Architecture}
+\section{Drivers}
+%Motivation
+%expected life time
+%limitations of technology/skills etc.
+\section{Patterns}
+%architectural patterns like mvc etc.
+\section{Views}
+%4+1 view model: etc.
+\section{Tactics}
+%modifiability
+%usability
+\section{Rationale}
+%Why different patterns and the resulting architecture was chosen
+
