--- a/doc/report/results/part_results.tex
+++ b/doc/report/results/part_results.tex
@@ -1,6 +1,4 @@
-\part{Results - The Game}
-\input{results/chp_concept}
-\input{results/chp_requirements}
+\part{Design and Implementation}
+\input{results/chp_design}
 \input{results/chp_architecture}
-\input{results/chp_development_process}
-\input{results/chp_gameplay}
+\input{results/chp_implementation}
