--- a/doc/report/study/chp_technology_study.tex
+++ b/doc/report/study/chp_technology_study.tex
@@ -1,1 +1,4 @@
-\chapter{Technology Study}
+\chapter{Game Development Technologies}
+\section{Game Engines}
+\section{Version Control}
+\section{Game Resources}
