--- a/doc/report/study/part_study.tex
+++ b/doc/report/study/part_study.tex
@@ -1,3 +1,5 @@
-\part{Study}
-\input{study/chp_literature_study}
+\part{Literature Study}
+\input{study/chp_games_history}
+\input{study/chp_interaction_devices}
+\input{study/chp_immersion}
 \input{study/chp_technology_study}
