--- a/doc/report/introduction/chp_introduction.tex
+++ b/doc/report/introduction/chp_introduction.tex
@@ -1,1 +1,47 @@
 \chapter{Introduction}
+The video game industry is one of the biggest entertainment industries in the world, and it has become a big part of people's lives, especially children, who are exposed to technologies like smart phones and tablet from an early age. 
+
+Video games come in all shapes and sizes, from being played on computers, video game consoles, smart phones, and even virtual reality headsets. There are also different types of video game developers ranging from big companies creating triple-A titles to small independent game companies and even individuals creating independent video games. 
+
+Today's technology makes it so that individuals and small teams can create video games that can reach millions of gamers online, without investing much more than just time. Big video game companies usually stick to tried and true video game types and interaction devices to reach as many people as possible and to generate the most revenue. Independent developers can on the other hand generally be more creative and innovative when creating video games, and create games that use unconventional interaction devices or game concepts.
+
+Proprietary input devices like motion controls for video game consoles mostly use standard communication protocols like USB or Bluetooth, which can be used to interface with a computer with the help of official and unofficial driver software. This is an exciting area for research which this report will delve into.
+
+\note{Nevne social interaction i spill, ønsker å se på samarbeid, spesielt blandt barn. boosting av sosial interaction.}
+%TODO: nevne social interaction
+%TODO: ønsket å se på samarbeid, spsielt mellom barn. boosting av social interaction. nevne i motivasjon og.
+
+\section{Context}
+This report is an extension of work done in a specialization project where I and Kjell R. Elstad explored different game technologies and concepts that goes into creating innovative video games. I was interested and continuing this work and to create a game prototype of one of the game concepts that were created in the specialization project.
+
+
+\section{Motivation}
+Video games have always been a big part in my life. I grew up playing video games and I still do on a daily basis. Having played a lot of video games, I am excited to specialize in a project where I can create my own video game and explore different game technologies and concepts.
+
+\note{Uferdig. nevne samarbeid mellom barn osv.}
+
+
+\section{Problem Description}
+The following problem description is based on the an earlier version given for the specialization project:
+
+\begin{displayquote}
+	In this project, the goal is to prototype an innovative game(s) and test this game(s) on users. The innovation can be in the type of gameplay the game provides, how it combines various game genres, what technology is used to control or play the game, how the social interaction between players is supported, and the purpose of the game.
+	
+	The first phase of the project will include a study of innovative games, game history, game technologies and game concepts, the second phase will be to implement one or more prototype, and the third phase will be to evaluate the concept through play-testing on real users.
+\end{displayquote}
+
+This project will cover the second and third phase of the overall project outline which covers game prototyping and play-testing. 
+
+\note{Burde jeg ha en slags overordnet problemstilling for hele prosjektet?}
+
+
+\section{Structure}
+The structure of this thesis is divided into five parts which roughly correspond to the order of phases that this project went through.
+\begin{description}
+	\item[Part I: Introduction and Methodology]
+	The introduction provides the context and motivation behind the project, the problem statement and the structure of this report.
+	\item[Part II: Literature Study]
+	\item[Part III: Design and Implementation]
+	\item[Part IV: Experimentation]
+	\item[Part V: Evaluation and Conclusion]
+\end{description}
